--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 
 <body>
     <header>
-        <img src="images/profile.jpg" alt="Student Photo" class="profile-img">
+        <img src="images/code-window.svg" alt="Student Photo" class="profile-img" fetchpriority="high">
         <span>Web And Computer Programming</span>
-        <button id="ham-btn" class="hamburger"></button>
+      <button id="ham-btn" class="hamburger" aria-label="Toggle navigation menu"></button>
+
     </header>
     <nav id="nav-bar" class="navigation">
         <ul>
@@ -45,7 +46,7 @@
                 I have a passion for creating beautiful and functional websites that provide a great user experience.
                 In my free time, I enjoy watching anime, listening to music and working out.</p>
             <h2> Student Photo</h2>
-            <img src="images/profile.jpg" alt="Student Photo" width="300" height="400">
+            <img src="images/profile.webp" alt="Student Photo" fetchpriority="high">
         </div>
         <h2> Web Certificate Courses</h2>
 
@@ -72,10 +73,10 @@
    
 
         <div class="socials">
-            <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg" alt="Instagram"
+            <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg" alt="Visit Instagram"
                     height="50"></a>
-            <a href="https://github.com/" target="_blank"><img src="images/github.svg" alt="Github" height="50"></a>
-            <a href="https://www.linkedin.com/login" target="_blank"><img src="images/linkedin.svg" alt="Linkedin"
+            <a href="https://github.com/" target="_blank"><img src="images/github.svg" alt="Visit Github" height="50"></a>
+            <a href="https://www.linkedin.com/login" target="_blank"><img src="images/linkedin.svg" alt="Visit Linkedin"
                     height="50"></a>
          </div>
          
