--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.ico">
     <title>Course Home Page</title>
     <meta name="description" content="A site dedicated to Sampson Longjohn's WDD231 assignments">
     <meta name="author" content="Sampson Longjohn">
