--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,14 +21,14 @@
 
     <meta property="og:title" content="Bonny Island Chamber of Commerce Directory">
     <meta property="og:description" content="Explore our business directory and connect with Bonny Island professionals.">
-    <meta property="og:image" content="images/og-image.png">
+    <meta property="og:image" content="https://puurpllotus.github.io/wdd231/chamber/images/og-image.png">
     <meta property="og:url" content="https://yourdomain.com/directory.html">
     <meta property="og:type" content="website">
 
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/directory.css">
 
-    <script src="script/directory.js" defer></script>
+    <script src="scripts/directory.js" defer></script>
 </head>
 
 <body>
