--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 
     <title>Bonny Island Chamber of Commerce Directory</title>
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.ico">
 
     <meta property="og:title" content="Bonny Island Chamber of Commerce Directory">
     <meta property="og:description" content="Explore our business directory and connect with Bonny Island professionals.">
@@ -33,7 +33,7 @@
 
 <body>
     <header>
-        <img src="images/favicon.png" alt="Bonny Island Chamber logo" class="logo">
+        <img src="images/logo-main.webp" alt="Bonny Island Chamber logo" class="logo">
         <span class="site-title">Bonny Island Chamber of Commerce</span>
        
         <button id="ham-btn" class="hamburger" aria-label="Toggle navigation menu"></button>
@@ -54,7 +54,7 @@
         </section>
         <section id="members" class="grid">
             <div class="member-card">
-                <img src="images/member1.jpg" alt="Estridos Beauty Salon & Spa">
+                <img src="images/estridos-spa.webp" alt="Estridos Beauty Salon & Spa">
                 <h2>Estridos Beauty Salon & Spa</h2>
                 <p>Beauty & Relaxation</p>
                 <p><strong>Email:</strong> info@estridos.com</p>
@@ -62,7 +62,7 @@
                 <p><strong>URL:</strong> estridos.com</p>
             </div>
             <div class="member-card">
-                <img src="images/member2.jpg" alt="EFC GYM">
+                <img src="images/efc-gym.webp" alt="EFC GYM">
                 <h2>EFC GYM</h2>
                 <p>Professional Work Out Facility</p>
                 <p><strong>Email:</strong> inquiry@efcgym.com</p>
@@ -70,7 +70,7 @@
                 <p><strong>URL:</strong> efcgym.com</p>
             </div>
             <div class="member-card">
-                <img src="images/member3.jpg" alt="Take Food">
+                <img src="images/takefood.webp" alt="Take Food">
                 <h2>Take Food</h2>
                 <p>Restaurant and Fast food</p>
                 <p><strong>Email:</strong> order@takefood.com</p>
