--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -1,91 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Bonny Island Business Directory Chamber of Commerce. Connect with local businesses, entrepreneurs, and professionals.">
-    <meta name="author" content="Sampson Longjohn">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Bonny Island Business Directory Chamber of Commerce. Connect with local businesses, entrepreneurs, and professionals.">
+  <meta name="author" content="Sampson Longjohn">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+  <title>Bonny Island Chamber of Commerce Directory</title>
 
-    <title>Bonny Island Chamber of Commerce Directory</title>
-    <link rel="icon" href="images/favicon.ico">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <meta property="og:title" content="Bonny Island Chamber of Commerce Directory">
+  <meta property="og:description" content="Explore our business directory and connect with Bonny Island professionals.">
+  <meta property="og:image" content="https://puurpllotus.github.io/wdd231/chamber/images/og-image.png">
+  <meta property="og:url" content="https://puurpllotus.github.io/wdd231/chamber/directory.html">
+  <meta property="og:type" content="website">
 
-    <meta property="og:title" content="Bonny Island Chamber of Commerce Directory">
-    <meta property="og:description" content="Explore our business directory and connect with Bonny Island professionals.">
-    <meta property="og:image" content="https://puurpllotus.github.io/wdd231/chamber/images/og-image.png">
-    <meta property="og:url" content="https://yourdomain.com/directory.html">
-    <meta property="og:type" content="website">
-
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/directory.css">
-
-    <script src="scripts/directory.js" defer></script>
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/directory.css">
+  <script src="scripts/directory.js" defer></script>
 </head>
 
 <body>
-    <header>
-        <img src="images/logo-main.webp" alt="Bonny Island Chamber logo" class="logo">
-        <span class="site-title">Bonny Island Chamber of Commerce</span>
-       
-        <button id="ham-btn" class="hamburger" aria-label="Toggle navigation menu"></button>
-        <nav id="nav-bar" class="navigation">
-            <ul>
-                <li><a href="index.html" class="current">Home</a></li>
-                <li><a href="directory.html" >Directory</a></li>
-                <li><a href="join.html">Join</a></li>
-                <li><a href="discover.html">Discover</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Directory</h1>
-        <section class="member-toggle">
-            <button id="gridView">Grid View</button>
-            <button id="listView">List View</button>
-        </section>
-        <section id="members" class="grid">
-            <div class="member-card">
-                <img src="images/estridos-spa.webp" alt="Estridos Beauty Salon & Spa">
-                <h2>Estridos Beauty Salon & Spa</h2>
-                <p>Beauty & Relaxation</p>
-                <p><strong>Email:</strong> info@estridos.com</p>
-                <p><strong>Phone:</strong> 555-1234</p>
-                <p><strong>URL:</strong> estridos.com</p>
-            </div>
-            <div class="member-card">
-                <img src="images/efc-gym.webp" alt="EFC GYM">
-                <h2>EFC GYM</h2>
-                <p>Professional Work Out Facility</p>
-                <p><strong>Email:</strong> inquiry@efcgym.com</p>
-                <p><strong>Phone:</strong> 555-5678</p>
-                <p><strong>URL:</strong> efcgym.com</p>
-            </div>
-            <div class="member-card">
-                <img src="images/takefood.webp" alt="Take Food">
-                <h2>Take Food</h2>
-                <p>Restaurant and Fast food</p>
-                <p><strong>Email:</strong> order@takefood.com</p>
-                <p><strong>Phone:</strong> 555-2468</p>
-                <p><strong>URL:</strong> takefood.com</p>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <div class="footer-content">
-            <p>Contact: chamber@bonnyisland.com | Address: Bonny Main St.</p>
-            <p>&copy; <span id="currentyear"></span> | Sampson Longjohn | WDD 231</p>
-            <p>Last Modified: <span id="lastModified"></span></p>
-        </div>
-    </footer>
-    
+  <header>
+    <img src="images/logo-main.webp" alt="Bonny Island Chamber logo" class="logo">
+    <span class="site-title">Bonny Island Chamber of Commerce</span>
+    <button id="ham-btn" class="hamburger" aria-label="Toggle navigation menu"></button>
+    <nav id="nav-bar" class="navigation">
+      <ul>
+        <li><a href="index.html" class="current">Home</a></li>
+        <li><a href="directory.html">Directory</a></li>
+        <li><a href="join.html">Join</a></li>
+        <li><a href="discover.html">Discover</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Directory</h1>
+    <section class="member-toggle">
+      <button id="gridView">Grid View</button>
+      <button id="listView">List View</button>
+    </section>
+    <section id="members" class="grid"></section>
+  </main>
+
+  <footer>
+    <div class="footer-content">
+      <p>Contact: chamber@bonnyisland.com | Address: Bonny Main St.</p>
+      <p>&copy; <span id="currentyear"></span> | Sampson Longjohn | WDD 231</p>
+      <p>Last Modified: <span id="lastModified"></span></p>
+    </div>
+  </footer>
 </body>
 </html>
