--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,11 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bonny Island Business Directory Chamber of Commerce. Connect with local businesses, entrepreneurs, and professionals.">
-  <meta name="author" content="Sampson Longjohn">
+  <meta name="author" content="Sampson Longj
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
-  <title>Bonny Island Chamber of Commerce Directory</title>
-
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+ <title>Bonny Island Chamber of Commerce Directory</title>
+  
+ <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <meta property="og:title" content="Bonny Island Chamber of Commerce Directory">
   <meta property="og:description" content="Explore our business directory and connect with Bonny Island professionals.">
   <meta property="og:image" content="https://puurpllotus.github.io/wdd231/chamber/images/og-image.png">
