--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bonny Island Business Directory Chamber of Commerce. Connect with local businesses, entrepreneurs, and professionals.">
-  <meta name="author" content="Sampson Longj
+  <meta name="author" content="Sampson Longjohn">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
