--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,7 +25,7 @@
   <meta property="og:type" content="website">
 
   <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/directory.css">
+  <link rel="stylesheet" href="styles/chamber.css">
   <script src="scripts/directory.js" defer></script>
 </head>
 
@@ -36,8 +36,8 @@
     <button id="ham-btn" class="hamburger" aria-label="Toggle navigation menu"></button>
     <nav id="nav-bar" class="navigation">
       <ul>
-        <li><a href="index.html" class="current">Home</a></li>
-        <li><a href="directory.html">Directory</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="directory.html class="current"">Directory</a></li>
         <li><a href="join.html">Join</a></li>
         <li><a href="discover.html">Discover</a></li>
       </ul>
