--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Bonny Island Chamber of Commerce - Home Page" />
+  <meta name="description" content="Bonny Island Chamber of Commerce - Welcome to our Home Page" />
   <meta name="author" content="Sampson Longjohn" />
 
   <title>Bonny Island Chamber of Commerce</title>
