--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/chamber.css">
 
   <script src="scripts/home.js" defer></script>
@@ -28,7 +27,7 @@
 
 <body>
   <header>
-    <img src="images/logo-main.webp" alt="Bonny Island Chamber logo" class="logo">
+    <img src="images/logo-main.webp" alt="Bonny Island Chamber logo" class="logo" lazy="loading">
     <span class="site-title">Bonny Island Chamber of Commerce</span>
     <button id="ham-btn" class="hamburger" aria-label="Toggle navigation menu"></button>
     <nav id="nav-bar" class="navigation">
@@ -43,7 +42,7 @@
 
   <main>
     <section class="hero" aria-label="Hero banner">
-      <img src="images/hero-image.webp" alt="Bonny Island landscape and businesses" class="hero-img">
+      <img src="images/hero-image.webp" alt="Bonny Island landscape and businesses" class="hero-img" lazy="loading">
       <a href="join.html" class="cta-button">Join the Chamber</a>
     </section>
 
@@ -83,7 +82,7 @@
 
     <section class="spotlights" aria-labelledby="spotlights-heading">
       <h2 id="spotlights-heading">Members in the Spotlight</h2>
-      <div id="spotlight-container" class="spotlight-grid" role="list">
+      <div id="spotlight-container" class="spotlight-grid"
       </div>
     </section>
   </main>
