--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,6 +21,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles/chamber.css">
+  <link rel="stylesheet" href="styles/large.css">
 
   <script src="scripts/home.js" defer></script>
 </head>
