--- a/chamber/join.html
+++ b/chamber/join.html
@@ -2,12 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="description" content="Bonny Island Chamber of Commerce - Membership Application" />
-    <meta name="author" content="Sampson Longjohn" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="Bonny Island Chamber of Commerce - Membership Application">
+    <meta name="author" content="Sampson Longjohn">
 
     <title>Join the Chamber | Bonny Island Chamber of Commerce</title>
+    <meta property="og:title" content="Bonny Island Chamber of Commerce">
+    <meta property="og:description" content="Connect with local businesses, entrepreneurs, and professionals.">
+    <meta property="og:image" content="https://puurpllotus.github.io/wdd231/chamber/images/og-image.png">
+    <meta property="og:url" content="https://puurpllotus.github.io/wdd231/chamber/home.html">
+    <meta property="og:type" content="website">
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -18,6 +23,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Playfair+Display&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles/chamber.css">
+    <link rel="stylesheet" href="styles/large.css">
     <script src="scripts/join.js" defer></script>
 </head>
 
