--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -26,6 +26,7 @@
 
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/chamber.css">
+  <link rel="stylesheet" href="styles/large.css">
   <script src="scripts/directory.js" defer></script>
 </head>
 
