--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Thank You | Bonny Island Chamber of Commerce</title>
   <link rel="stylesheet" href="styles/chamber.css">
+  <link rel="stylesheet" href="styles/large.css">
   <script src="scripts/thankyou.js" defer></script>
 </head>
 <body>
