--- a/chamber/join.html
+++ b/chamber/join.html
@@ -15,6 +15,8 @@
     <meta property="og:type" content="website">
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="desktop.css" media="(min-width: 768px)">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +26,8 @@
 
     <link rel="stylesheet" href="styles/chamber.css">
     <link rel="stylesheet" href="styles/large.css">
-    <script src="scripts/join.js" defer></script>
+
+    <script src="scripts/join.js"></script>
 </head>
 
 <body>
